welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: expected class or object definition
def  colonne(){
^Array2:21: error: expected class or object definition
def remplir():Array[Color]={
^Array2:35: error: Unmatched closing brace '}' ignored here
}
^