welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var T=remplir 
  gauche()
  avance()
  droite()
  colonne()
}
}
def  colonne(){
  litMessage=decalage
  setCouleurBrosse(T(decalage))
  for (i<-1 to getWorldHeight-1){
    avance()
    setCouleurBrosse(T((i+decalage)% T.length))
    baisseBrosse
    leveBrosse
  }
}


def remplir():Array[Color]={
  var X:Int=getWorldHeight()
  var T = new Array[Color](X)
  T(0) = getCouleurSol()
  for (i<-1 to X-1){
    avance()
    T(i)=getCouleurSol()
  }
  for (i<-0 to X-2){
    recule
  }
  return T
}